--- a/RecipezWeb/package.json
+++ b/RecipezWeb/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "chart.js": "^3.9.1",
     "ng-zorro-antd": "^14.1.1",
+    "ng2-charts": "^3.1.2",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4"
   },
